# internal/pkg/service/stream/api/gen/http/stream/server/encode_decode.go
@@ -3859,6 +3859,23 @@ func unmarshalTableColumnTemplateRequestBodyToStreamTableColumnTemplate(v *Table
 	return res
 }
 
+// unmarshalJobTriggerSinkCreateRequestBodyToStreamJobTriggerSinkCreate builds
+// a value of type *stream.JobTriggerSinkCreate from a value of type
+// *JobTriggerSinkCreateRequestBody.
+func unmarshalJobTriggerSinkCreateRequestBodyToStreamJobTriggerSinkCreate(v *JobTriggerSinkCreateRequestBody) *stream.JobTriggerSinkCreate {
+	if v == nil {
+		return nil
+	}
+	res := &stream.JobTriggerSinkCreate{
+		ComponentID:        *v.ComponentID,
+		ConfigID:           *v.ConfigID,
+		BranchID:           *v.BranchID,
+		ConfigDataTemplate: v.ConfigDataTemplate,
+	}
+
+	return res
+}
+
 // marshalStreamTableSinkToTableSinkResponseBody builds a value of type
 // *TableSinkResponseBody from a value of type *stream.TableSink.
 func marshalStreamTableSinkToTableSinkResponseBody(v *stream.TableSink) *TableSinkResponseBody {
@@ -3928,6 +3945,22 @@ func marshalStreamTableColumnTemplateToTableColumnTemplateResponseBody(v *stream
 	return res
 }
 
+// marshalStreamJobTriggerSinkToJobTriggerSinkResponseBody builds a value of
+// type *JobTriggerSinkResponseBody from a value of type *stream.JobTriggerSink.
+func marshalStreamJobTriggerSinkToJobTriggerSinkResponseBody(v *stream.JobTriggerSink) *JobTriggerSinkResponseBody {
+	if v == nil {
+		return nil
+	}
+	res := &JobTriggerSinkResponseBody{
+		ComponentID:        v.ComponentID,
+		ConfigID:           v.ConfigID,
+		BranchID:           v.BranchID,
+		ConfigDataTemplate: v.ConfigDataTemplate,
+	}
+
+	return res
+}
+
 // marshalStreamSinkToSinkResponseBody builds a value of type *SinkResponseBody
 // from a value of type *stream.Sink.
 func marshalStreamSinkToSinkResponseBody(v *stream.Sink) *SinkResponseBody {
@@ -3942,6 +3975,9 @@ func marshalStreamSinkToSinkResponseBody(v *stream.Sink) *SinkResponseBody {
 	}
 	if v.Table != nil {
 		res.Table = marshalStreamTableSinkToTableSinkResponseBody(v.Table)
+	}
+	if v.JobTrigger != nil {
+		res.JobTrigger = marshalStreamJobTriggerSinkToJobTriggerSinkResponseBody(v.JobTrigger)
 	}
 	if v.Version != nil {
 		res.Version = marshalStreamVersionToVersionResponseBody(v.Version)
@@ -3977,6 +4013,23 @@ func unmarshalTableSinkUpdateRequestBodyToStreamTableSinkUpdate(v *TableSinkUpda
 	}
 	if v.Mapping != nil {
 		res.Mapping = unmarshalTableMappingRequestBodyToStreamTableMapping(v.Mapping)
+	}
+
+	return res
+}
+
+// unmarshalJobTriggerSinkUpdateRequestBodyToStreamJobTriggerSinkUpdate builds
+// a value of type *stream.JobTriggerSinkUpdate from a value of type
+// *JobTriggerSinkUpdateRequestBody.
+func unmarshalJobTriggerSinkUpdateRequestBodyToStreamJobTriggerSinkUpdate(v *JobTriggerSinkUpdateRequestBody) *stream.JobTriggerSinkUpdate {
+	if v == nil {
+		return nil
+	}
+	res := &stream.JobTriggerSinkUpdate{
+		ComponentID:        v.ComponentID,
+		ConfigID:           v.ConfigID,
+		BranchID:           v.BranchID,
+		ConfigDataTemplate: v.ConfigDataTemplate,
 	}
 
 	return res
@@ -4108,6 +4161,9 @@ func marshalStreamAggregatedSinkToAggregatedSinkResponseBody(v *stream.Aggregate
 	}
 	if v.Table != nil {
 		res.Table = marshalStreamTableSinkToTableSinkResponseBody(v.Table)
+	}
+	if v.JobTrigger != nil {
+		res.JobTrigger = marshalStreamJobTriggerSinkToJobTriggerSinkResponseBody(v.JobTrigger)
 	}
 	if v.Version != nil {
 		res.Version = marshalStreamVersionToVersionResponseBody(v.Version)
